# team-separation-of-duties

./: .coveragerc  .gitignore  LICENSE  README.md  environment.yml  local.db  main.py  pyproject.toml  setup.cfg
Classes/: Validate.py
internet_forensics/: app.py  main.py  main_constants.py
internet_forensics/Config/: system_settings.xml
internet_forensics/View_control/: user_manager_vc.py
internet_forensics/api/: constants.py  database_connect.py  routes.py  sql_crud.py
internet_forensics/privacy_policy/: GDPR.py  data_management.py
internet_forensics/src/internet_forensics/: __init__.py  constants.py  main.py
internet_forensics/user_manager/: user_manager.py  user_manager_constants.py
internet_forensics/validate/: constants.py  validation.py
internet_forensics/validation/: constants.py  sanitize.py  validate.py
src/internet_forensics/: __init__.py  app.py  constants.py  session.py  utils.py
src/internet_forensics/cli/: __init__.py  constants.py  utils.py
src/internet_forensics/database/: __init_.py  constants.py  db.py  local.db  query.py
src/internet_forensics/datastore/: local.db
src/internet_forensics/encryption/: __init__.py  constants.py  encrypt.py
src/internet_forensics/log/: constants.py  custom_logger.py
src/internet_forensics/logging/: __init__.py  constants.py  custom_logger.py
src/internet_forensics/user/: __init__.py  constants.py  user_manager.py
src/internet_forensics/user_manager/: __init__.py  user_manager.py
src/internet_forensics/validate/: constants.py  validation.py
tests/internet_forensics/cli/: test_utils.py
(+42 files in other folders)
