[build-system]
requires = [
    "setuptools<60.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "internet_forensics"
description = "This package provides a fully-functional secure CRUD API for the Dutch Police Internet Forensics-related use case"
readme = "README.md"
requires-python = ">=3.9.7"

[tool.black]
line-length = 88
target_version = ['py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude common directories in the root of the project
  | \.git
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''